examples/test/testpolicy14729.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14729
  namespace: namespace167
spec:
  podSelector:
    matchLabels:
      key28: value8
      key41: value8
      key47: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value34
          key42: value6
          key0: value49
      podSelector:
        matchLabels:
          key12: value45
          key45: value26
